--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,13 @@
   padding: 0;
   margin: 0;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
